# test-cookiecutter-worgue-django-core

./: README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: .gitignore  Pipfile  pyproject.toml
{{cookiecutter.project_slug}}/.devcontainer/: devcontainer.json  docker-compose.yml
{{cookiecutter.project_slug}}/docker/django/: Dockerfile
{{cookiecutter.project_slug}}/docker/nginx/: Dockerfile
{{cookiecutter.project_slug}}/docker/psql/: Dockerfile
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: settings.py  urlhelper.py  urls.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/contrib/sites/migrations/: 0003_set_site_domain_and_name.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/docker/django/: Dockerfile  entrypoint.sh
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/docker/nginx/: nginx.conf
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/env/: .env  env.default  env.dev  env.prod  env.test
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/settings/: 10-base.conf  20-engins.conf  25-sessions.conf  30-email.conf  40-storages.conf  45-templates.conf  50-project.conf  60-migrations.conf  95-django-db-email-backend.conf  95-django-extensions.conf  98-apps.conf  99-final.conf  base.py  local.py
